# Projekt

./: CMakeLists.txt  Makefile  README.md  SpaceCommander  a  assets.h  extra.c  extra.h  game.c  game.h  game_over.c  game_over.h  highscores.c  install.sh  main.c  main.h  object_factory.c  sfml.c
cmake/Modules/: FindCSFML.cmake
data/: highscores.txt
src/: comp.txt  extra.c  extra.h  game.c  game.h  game_over.c  game_over.h  highscores.c  highscores.h  main.c  main.h  object_factory.c  object_factory.h  xclip
